--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 #player {
   width: 50px;
   height: 50px;
-  background-image: url("images/dinosaur.png");
+  background-image: url("images/avocado.png");
   background-size: cover;
   background-position: center;
   position: relative;
